tidy up the look/css

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">	
 	</head>
 	<body>
-		<div class="box">
+		<div id="box">
 			<h4>Super Duper</h4> 
 			<form id="file-form" action="batching_exercise.js" method="POST">
 				<div>
@@ -17,6 +17,13 @@
 					<select  id="choose-field">
 					<option value="choose-field" selected> Choose field</option> 
 					</select>
+
+
+
+
+
+
+
 				</div>
 				<div id= "bottomdiv">
 				
