--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="box">
-			<h4>Super Duper</h4> 
+			<h4>Data Detector</h4> 
 			<form id="file-form" action="batching_exercise.js" method="POST">
 				<div>
 					<input id="file_upload" name="upload" type="file" accept=".csv">
@@ -41,7 +41,7 @@
 
 						<button id="process-btn" class="btn btn-lg hidden"  type="button" disabled>Send Request</button>
 				</div>
-						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using Super Duper :-) !</p>
+						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using the Data Detector :-) !</p>
 			</form>
 
 		</div>
