--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="box">
-			<h4>Data Detector</h4> 
+			<img src="Asset_4.png" width=340.98 height=130.81 id="logo" >
 			<form id="file-form" action="batching_exercise.js" method="POST">
 				<div>
 					<input id="file_upload" name="upload" type="file" accept=".csv">
@@ -17,12 +17,6 @@
 					<select  id="choose-field">
 					<option value="choose-field" selected> Choose field</option> 
 					</select>
-
-
-
-
-
-
 
 				</div>
 				<div id= "bottomdiv">
@@ -41,7 +35,7 @@
 
 						<button id="process-btn" class="btn btn-lg hidden"  type="button" disabled>Send Request</button>
 				</div>
-						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using the Data Detector :-) !</p>
+						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using the <br><img src= "Asset_1.png" > :-) !</p>
 			</form>
 
 		</div>
