start connecting MongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,11 @@
 
 		</div>
 
+		<script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+<script>
+uuidv4(); // -> v4 UUID
+</script> 
+
  	 <script src="js.js"></script>
 	</body>
 
