1st attempt to create dynamic download

--- a/public/index.html
+++ b/public/index.html
@@ -35,15 +35,13 @@
 
 						<button id="process-btn" class="btn btn-lg hidden"  type="button" disabled>Send Request</button>
 				</div>
-						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using the <br><img src= "Asset_1.png" > :-) !</p>
+						<p id="filereceived" class="hidden"> Request received! An email with your edited file attached will be sent to you shortly. Thank you for using the <br><img src= "Asset_1.png" > :-) !  <br> To Download your file directly please click <a id="downloadbtn" target="_blank"> here </a></p>
 			</form>
 
 		</div>
 
 		<script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
-<script>
-uuidv4(); // -> v4 UUID
-</script> 
+
 
  	 <script src="js.js"></script>
 	</body>
